# vst-host

./: .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
resources/: sample-plugin-cache.json  sample-project.json
src/: AppMain.cpp  CMakeLists.txt
src/audio/: DeviceEngine.cpp  DeviceEngine.h  Resampler.cpp  Resampler.h
src/graph/: GraphEngine.cpp  GraphEngine.h  Node.cpp  Node.h  NodeFactory.cpp  NodeFactory.h  ParameterQueue.h
src/graph/Nodes/: AudioIn.h  AudioOut.h  ChannelTap.h  CompressorNode.cpp  CompressorNode.h  DelayNode.cpp  DelayNode.h  EqualizerNode.cpp  EqualizerNode.h  Gain.h  GainNode.cpp  GainNode.h  Merge.h  Mix.h  ReverbNode.cpp  ReverbNode.h  Split.h  VstFx.cpp  VstFx.h
src/gui/: ChainPresetPanel.cpp  ChainPresetPanel.h  ConsoleView.cpp  ConsoleView.h  ConsoleWindow.cpp  ConsoleWindow.h  GraphView.cpp  GraphView.h  MainWindow.Project.cpp  MainWindow.cpp  MainWindow.h  PluginBrowser.cpp  PluginBrowser.h  PluginEditorSizing.h  PluginSettingsComponent.cpp  PluginSettingsComponent.h  Preferences.cpp  Preferences.h
src/host/: PluginHost.Vst2.cpp  PluginHost.Vst3.cpp  PluginHost.Vst3Editor.cpp  PluginHost.cpp  PluginHost.h  PluginHostVst3Editor.h  PluginScanner.cpp  PluginScanner.h  SharedLibrary.h  Vst3Iids.cpp
src/persist/: ChainPreset.cpp  ChainPreset.h  Config.cpp  Config.h  Preset.cpp  Preset.h  Project.cpp  Project.h
src/util/: ConsoleLogger.cpp  ConsoleLogger.h  Localization.cpp  Localization.h
